<resources>
    <string name="app_name">MoneyManager</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="pref_file_key">pref_file_key</string>
    <string name="pref_is_user_login">isuserlogin</string>
    <string name="pref_name_of_user">nameofuser</string>
    <string name="pref_user_password">passwordofuser</string>
    <string name="pref_is_remember_login_clicked">isrememberloginclick</string>
    <string name="pref_is_login_using_gmail">isusinggmail</string>
    <string name="web_client_id">716045523596-papk7s8o78d6icq3caks6amem7q3fmnl.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SETTING">SETTING</string>
    <string name="Language">Language</string>
    <string name="Datetime">Datetime</string>
    <string name="Note">Note</string>
    <string name="Category">Category</string>
    <string name="Save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="Delete">Delete</string>
    <string name="Change_language">Change language</string>
    <string name="English_EN">   English - EN</string>
    <string name="Vietnamese_VIE">   Vietnamese - VIE</string>
    <string name="CALENDAR">CALENDAR</string>
    <string name="SUN">SUN</string>
    <string name="MON">MON</string>
    <string name="TUE">TUE</string>
    <string name="WED">WED</string>
    <string name="THUR">THUR</string>
    <string name="FRI">FRI</string>
    <string name="SAT">SAT</string>
    <string name="Income">Income</string>
    <string name="Expense">Expense</string>
    <string name="Total">Total</string>
    <string name="EDIT_CATEGORY">EDIT CATEGORY</string>
    <string name="ADD_NEW_CATEGORY">ADD NEW CATEGORY</string>
    <string name="NEW_CATEGORY">New Category</string>
    <string name="Name">Name</string>
    <string name="Icon">Icon</string>
    <string name="Color">Color</string>
    <string name="Import">Import</string>
    <string name="EXPENSE">EXPENSE</string>
    <string name="HEADER">HEADER</string>
    <string name="HI_USER">WELCOME</string>
    <string name="Income_Rate">Income Rate</string>
    <string name="Today_transactions">Today transactions</string>
    <string name="Historical_documentation">Historical documentation</string>
    <string name="Operation">Operation</string>
    <string name="Income_Expanse">Income/Expanse</string>
    <string name="Calendar">Calendar</string>
    <string name="Statistic">Statistic</string>
    <string name="More">More</string>
    <string name="Setting">Setting</string>
    <string name="PROFILE">PROFILE</string>
    <string name="Logout">Logout</string>
    <string name="STATISTIC">STATISTIC</string>
    <string name="This_Week">This Week</string>
    <string name="This_Month">This Month</string>
    <string name="This_Year">This Year</string>
    <string name="Transaction">Transaction</string>
    <string name="Food">Food</string>
    <string name="Username">Username</string>
    <string name="Or_log_in_with">Or log in with</string>
    <string name="Password">Password</string>
    <string name="Dont_have_an_account_Signup">Don’t have an account? Signup</string>
    <string name="Remember_login">Remember login</string>
    <string name="Breakfast">Breakfast</string>
    <string name="Yourname">Your name</string>
    <string name="Already_have_an_account_Login">Already have an account? Login</string>
    <string name="Theme">Theme</string>
    <string name="Text_Formatting">Text Formatting</string>
    <string name="Category_name_already_exists">Category name already exists</string>
    <string name="Please_enter_all_fields">Please enter all fields</string>
    <string name="Email">Email</string>
    <string name="Notification">Notification</string>
    <string name="Home">Home</string>
    <string name="Chart">Chart</string>
    <string name="Money_Change">Money Change</string>
    <string name="Profile">Profile</string>
    <string name="Insert">Insert</string>
    <string name="Import_failed">Import failed</string>
    <string name="No_network_connection_Import_failed">No network connection. Import failed.</string>
    <string name="Please_enter_a_valid_number">Please enter a valid number</string>
    <string name="Please_enter_a_valid_value">Please enter a valid value</string>
    <string name="Please_enter_Login_information">Please enter login information</string>
    <string name="Fail_to_login_with_Google">Fail to login with Google</string>
    <string name="Wrong_username_or_password">Wrong username or password</string>
    <string name="Sign_up_successfully">Sign up successfully</string>
    <string name="User_already_exist">User already exist</string>
    <string name="Import_bill_successfully">Import bill successfully</string>
    <string name="Enter_your_username">Enter your username</string>
    <string name="Enter_your_password">Enter your password</string>
    <string name="Enter_your_name">Enter your name</string>
    <string name="Instruction">Instruction</string>
    <string name="Feedback_Contact">Feedback/Contact</string>
    <string name="Edit_bill">Edit bill</string>
    <string name="Change_name">Change Name</string>
    <string name="Change_password">Change password</string>
    <string name="Enter_new_name">Enter new name </string>
    <string name="Old_password">Old password</string>
    <string name="New_password">New password</string>
    <string name="Confirm_password">Confirm password</string>
    <string name="To">To</string>
    <string name="Subject">Subject</string>
    <string name="Message">Message</string>
    <string name="Send">Send</string>
    <string name="No_network_connection">No network connection</string>
    <string name="No_offline_login_info">There are no offline credentials that match the local database</string>
    <string name="Wrong_Password">Wrong Password!</string>
    <string name="Password_change_successfully">Your password has been changed successfully</string>
    <string name="Fullname_change_successfully">Your name has been changed successfully</string>
    <string name="Password_confirm_not_match">The password confirmation\ndoes not match.</string>
    <string name="Please_enter_new_name">Please enter new name</string>
    <string name="List_of_Categories">List of categories</string>
    <string name="Deleted">Deleted</string>
    <string name="Failed">Failed</string>
    <string name="Saved">Saved</string>
    <string name="SavedOffline">Saved in local</string>
    <string name="NoNetwork">No network connection</string>
    <string name="Error">Error: </string>
    <string name="Skip">Skip</string>
    <string name="Back">Back</string>
    <string name="Next">Next</string>
    <string name="heading_one">Heading One</string>
    <string name="heading_two">Heading Two</string>
    <string name="heading_three">Heading Three</string>
    <string name="heading_fourth">Heading Fourth</string>
    <string name="desc_one">Heading One</string>
    <string name="desc_two">Heading Two</string>
    <string name="desc_three">Heading Three</string>
    <string name="desc_fourth">Heading Fourth</string>
    <string name="You_have_not_made_any_transaction_yet">You have not made any transaction yet</string>
    <string name="Week">Week</string>
    <string name="Month">Month</string>
    <string name="Year">Year</string>
    <string name="No_bill_data_for_this">No bill data for this</string>
    <string name="Loading_data">Loading data</string>
    <string name="of">Of</string>
    <string name="by_category">By Category</string>
    <string name="This">This</string>
    <string name="Income_rate">Income</string>
    <string name="Expense_rate">Expense</string>
</resources>