<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main_background"
    android:orientation="vertical"
    android:padding="10dp"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/To"
            android:fontFamily="@font/sf_pro_text_medium"
            android:textSize="16sp"
            android:textColor="@color/black_blue"
            android:layout_gravity="center_vertical"
            />
        <Spinner
            android:id="@id/spinner_to"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="left"
            android:layout_gravity="center"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Subject"
                    android:fontFamily="@font/sf_pro_text_medium"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black_blue"
                    />
                <EditText
                    android:id="@+id/edittext_subject"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="FEEDBACK FROM MONEYMANAGER APP"
                    android:background="@drawable/edittext_income"
                    android:textColor="@color/black_blue"
                    android:autoSizeTextType="uniform"
                    />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                android:orientation="vertical">
        <TextView
            android:id="@+id/textview_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Message"
            android:fontFamily="@font/sf_pro_text_medium"
            android:textColor="@color/black_blue"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            />
        <EditText
            android:id="@+id/edittext_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_income"
            android:inputType="textMultiLine"
                android:minLines="5"
                android:gravity="top|start"
            android:layout_gravity="center_vertical"

            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_gravity="center"
            >
        <Button
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            style="@style/ButtonStyle"
            android:text="@string/Cancel"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            />
        <Button
            android:id="@+id/button_send"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            style="@style/ButtonStyle"
            android:text="@string/Send"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            />
        </LinearLayout>
</LinearLayout>
