<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main_background">

<LinearLayout
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Phần tiêu đề "Change language" -->
<androidx.constraintlayout.widget.ConstraintLayout
android:layout_width="match_parent"
android:layout_height="wrap_content" android:padding="10dp"
    android:background="@drawable/main_background">

<TextView
android:id="@+id/textview_changeLanguage"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:fontFamily="@font/sf_pro_text_medium"
android:text="@string/Change_language"
android:textSize="20dp"
android:textColor="@color/MidnightBlue"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent"
app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
android:gravity="center"
    >
</TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Phần chọn ngôn ngữ sử dụng Checkbox -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <CheckBox
                android:id="@+id/checkbox_engLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/English_EN"
                android:fontFamily="@font/sf_pro_text_regular"
                android:textSize="16sp"
                android:button="@drawable/checkbox_selector"
                android:gravity="center"
                android:textColor="@color/MidnightBlue"
                android:layout_marginBottom="8dp"/>

            <CheckBox
                android:id="@+id/checkbox_vieLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Vietnamese_VIE"
                android:fontFamily="@font/sf_pro_text_regular"
                android:textSize="16sp"
                android:textColor="@color/MidnightBlue"
                android:button="@drawable/checkbox_selector"
                android:gravity="center"
                android:layout_marginBottom="8dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/button_Save"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:fontFamily="@font/sf_pro_text_regular"
                    android:text="@string/Save"
                    android:textSize="16sp"
                    android:gravity="center"
                    style="@style/ButtonStyle"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/btn_cancel"
                    android:layout_marginRight="10dp"
                    >
                </Button>
                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/Cancel"
                    android:textSize="16sp"
                    android:gravity="center"
                    style="@style/ButtonStyle"
                    app:layout_constraintTop_toTopOf="@+id/button_Save"
                    app:layout_constraintBottom_toBottomOf="@+id/button_Save"
                    app:layout_constraintEnd_toStartOf="@id/button_Save"
                    android:layout_marginRight="10dp"
                    android:contentDescription="Button to cancel"
                    tools:ignore="TouchTargetSizeCheck">
                </Button>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </LinearLayout>


    </LinearLayout>
    </FrameLayout>
