<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.Expense.NewCategoryFragment"
    android:layout_margin="10dp"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/main_background">
            <TextView
                android:id="@+id/textview_labelAddCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_text_medium"
                android:text="@string/EDIT_CATEGORY"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black_blue"
                android:layout_gravity="center"
                >
            </TextView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textview_Name_addCategory"
                    android:text="@string/Name"
                    android:fontFamily="@font/sf_pro_text_medium"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="25dp"
                    android:textSize="16sp"
                    android:textColor="@color/black_blue"
                    >
                </TextView>
                <EditText
                    android:id="@+id/edittext_nameCategory"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_income"
                    app:layout_constraintTop_toTopOf="@+id/textview_Name_addCategory"
                    app:layout_constraintBottom_toBottomOf="@id/textview_Name_addCategory"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/textview_Name_addCategory"
                    app:layout_constraintBaseline_toBaselineOf="@id/textview_Name_addCategory"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="15dp"
                    android:textColor="@color/black_blue"
                    >
                </EditText>
                <TextView
                    android:id="@id/textview_Icon_addCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/sf_pro_text_medium"
                    android:text="@string/Icon"
                    android:textColor="@color/black_blue"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/textview_Name_addCategory"
                    app:layout_constraintLeft_toLeftOf="parent"/>
                <GridView
                    android:id="@+id/gridview_icon"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:numColumns="5"
                    tools:listitem="@layout/gv_item_icon"
                    android:layout_marginHorizontal="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/textview_Icon_addCategory"
                    app:layout_constraintBottom_toTopOf="@+id/textview_Color_addCategory"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintRight_toRightOf="parent"
                    android:background="@drawable/border_selector"
                    android:verticalSpacing="10dp"
                    />
                <TextView
                    android:id="@+id/textview_Color_addCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/sf_pro_text_medium"
                    android:text="@string/Color"
                    android:textColor="@color/black_blue"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/gridview_icon"
                    app:layout_constraintLeft_toLeftOf="parent"
                    />
                <GridView
                    android:id="@+id/gridview_color"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:numColumns="4"
                    tools:listitem="@layout/gv_item_color"
                    android:layout_marginHorizontal="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/textview_Color_addCategory"
                    app:layout_constraintBottom_toTopOf="@+id/action"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintRight_toRightOf="parent"
                    android:background="@drawable/border_selector"
                    />
                <LinearLayout
                    android:id="@+id/action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:weightSum="3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBaseline_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/gridview_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    >

                <Button
                    android:id="@+id/btn_cancelCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    style="@style/ButtonStyle"
                    android:text="@string/Cancel"
                    android:layout_marginBottom="10dp"
                    android:layout_marginHorizontal="10dp"
                    >
                </Button>
                <Button
                    android:id="@+id/btn_deleteCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    style="@style/ButtonStyle"
                    android:text="@string/Delete"
                    android:layout_marginBottom="10dp"
                    android:layout_marginHorizontal="10dp"
                    >
                </Button>
                    <Button
                    android:id="@+id/btn_saveCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    style="@style/ButtonStyle"
                    android:text="@string/Save"
                    android:layout_marginBottom="10dp"
                    android:layout_marginHorizontal="10dp"
                    >
                </Button>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
</FrameLayout>